--- a/Tartarus2014_Loon.conf
+++ b/Tartarus2014_Loon.conf
@@ -1,3 +1,8 @@
+# Loon官方文档：https://nsloon.app/docs/intro
+# Loon教程链接：https://coffee-elderberry-22b.notion.site/Loon-71747252d5054551a8cd10924064899c
+# Loon第三方知识库：https://t.me/ibilibili/581
+# Loon规则GitHub：https://github.com/blackmatrix7/ios_rule_script/tree/master/rule/Loon
+
 # 导入配置。
 # 导入完成后点 https://www.nsloon.com/openloon/flowmodel=filter 切换至自动分流模式。
 # 再点 https://www.nsloon.com/openloon/proxymode=tun 切换代理模式至 TUN Only 模式 [此操作点击跳转至Loon后即为切换成功]。
@@ -57,14 +62,14 @@ switch-node-after-failure-times = 3
 geoip-url = https://raw.githubusercontent.com/Masaiki/GeoIP2-CN/release/Country.mmdb
 ipasn-url = https://raw.githubusercontent.com/P3TERX/GeoLite.mmdb/download/GeoLite2-ASN.mmdb
 # 解析器
-resource-parser = https://github.com/sub-store-org/Sub-Store/releases/latest/download/sub-store-parser.loon.min.js
+resource-parser = https://raw.githubusercontent.com/sub-store-org/Sub-Store/release/sub-store-parser.loon.min.js
 
 [Host]
 
 [Proxy]
 
 [Remote Proxy]
-机场 = 机场链接
+静帆 = https://sub.store/download/%E9%9D%99%E5%B8%86,parser-enabled = true,udp=true,block-quic=true,fast-open=true,vmess-aead=true,skip-cert-verify=true,enabled=true,flexible-sni=true
 
 [Proxy Group]
 FINAL = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
@@ -95,6 +100,7 @@ AI = select,美国节点,img-url = https://raw.githubusercontent.com/Semporia/Ha
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Advertising/Advertising.list, policy=REJECT, tag=去广告, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Advertising/Advertising_Domain.list, policy=REJECT, tag=去广告, enabled=true
 https://whatshub.top/rule/ai.list, policy=AI, tag=AI, enabled=true
+https://whatshub.top/rule/GitHub.list, policy=节点选择, tag=Github, enabled=true
 https://whatshub.top/rule/Google.list, policy=Google, tag=Google, enabled=true
 https://whatshub.top/rule/GoogleVoice.list, policy=Voice, tag=Voice, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/TestFlight/TestFlight.list, policy=节点选择, tag=TestFlight, enabled=true
@@ -108,6 +114,7 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Telegram/Telegram.list, policy=电报消息, tag=电报消息, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Proxy/Proxy.list, policy=节点选择, tag=全球规则, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Proxy/Proxy_Domain.list, policy=节点选择, tag=全球规则, enabled=true
+https://rule.kelee.one/Loon/ChinaMax.list, policy=DIRECT, tag=ChinaMax.list, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/China/China.list, policy=DIRECT, tag=全球直连, enabled=true
 
 [Rule]
@@ -123,10 +130,11 @@ FINAL,FINAL
 [Remote Script]
 
 [Plugin]
+https://raw.githubusercontent.com/PoetryU/Scientist/master/Loon/Plugin/gh429.plugin, tag=Github|429, enabled=true
 https://raw.githubusercontent.com/Script-Hub-Org/Script-Hub/main/modules/script-hub.loon.plugin, policy=节点选择, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/Loon.plugin, policy=节点选择, enabled=true
 https://kelee.one/Tool/Loon/Plugin/LoonGallery.plugin, policy=节点选择, enabled=true
-https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, enabled=true
+https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, policy=节点选择, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/plugin/HTTPDNS.Block.plugin, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/plugin/DNS.plugin, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/plugin/General.plugin, enabled=true
