--- a/Sol81X.conf
+++ b/Sol81X.conf
@@ -15,8 +15,8 @@
 
 [General]
 # IPv6 支持
-ip-mode = v6-prefer
-ipv6-vif = auto
+ip-mode = dual
+ipv6-vif = off
 # UDP相关
 disable-stun = true
 udp-fallback-mode = REJECT
@@ -66,92 +66,68 @@ geoip-url = https://raw.githubusercontent.com/Masaiki/GeoIP2-CN/release/Country.
 resource-parser = https://cdn.jsdelivr.net/gh/sub-store-org/Sub-Store@release/sub-store-parser.loon.min.js
 
 [Host]
+# applestore加速CDN
 iosapps.itunes.apple.com = iosapps.itunes.apple.com.download.ks-cdn.com
 
 [Proxy]
 
 [Remote Proxy]
-订阅 = 机场链接
+
 [Proxy Group]
 审判日 = select,DIRECT,来往,REJECT,img-url = https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/jianshouqing-emby.png
-来往 = url-test,🇭🇰 香港节点,🇨🇳 台湾节点,🇺🇸 美国节点,🇰🇷 韩国节点,🇷🇺 俄罗斯节点,🇬🇧 英国节点,🇯🇵 日本节点,🇸🇬 新加坡节点,🇨🇦 加拿大,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Direct.png
-🍿 国外媒体 = select,🇭🇰 香港节点,🇺🇸 美国节点,🇸🇬 新加坡节点,🇯🇵 日本节点,🇨🇳 台湾节点,🇬🇧 英国节点,🇰🇷 韩国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/ForeignMedia.png
-🍔 国内媒体 = select,DIRECT,🇭🇰 香港节点,🇺🇸 美国节点,🇸🇬 新加坡节点,🇯🇵 日本节点,🇨🇳 台湾节点,🇬🇧 英国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/DomesticMedia.png
-Ⓜ️ 微软服务 = select,DIRECT,🇭🇰 香港节点,🇺🇸 美国节点,🇸🇬 新加坡节点,🇯🇵 日本节点,🇨🇳 台湾节点,🇬🇧 英国节点,🇰🇷 韩国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Microsoft.png
-🍎 苹果服务 = select,DIRECT,🇭🇰 香港节点,🇺🇸 美国节点,🇸🇬 新加坡节点,🇯🇵 日本节点,🇨🇳 台湾节点,🇬🇧 英国节点,🇰🇷 韩国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
-🎮 游戏平台 = select,DIRECT,🇭🇰 香港节点,🇺🇸 美国节点,🇸🇬 新加坡节点,🇯🇵 日本节点,🇨🇳 台湾节点,🇬🇧 英国节点,🇰🇷 韩国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Game.png
-Telegram = select,🇭🇰 香港节点,🇺🇸 美国节点,🇸🇬 新加坡节点,🇯🇵 日本节点,🇨🇳 台湾节点,🇬🇧 英国节点,🇰🇷 韩国节点,来往,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
-Twitter = select,🇭🇰 香港节点,🇺🇸 美国节点,🇸🇬 新加坡节点,🇯🇵 日本节点,🇨🇳 台湾节点,🇬🇧 英国节点,🇰🇷 韩国节点,来往,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Twitter.png
-YouTube = select,🇭🇰 香港节点,🇺🇸 美国节点,🇸🇬 新加坡节点,🇯🇵 日本节点,🇨🇳 台湾节点,🇬🇧 英国节点,🇰🇷 韩国节点,来往,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
+来往 = url-test,香港,台湾,美国,韩国,日本,新加坡,加拿大鹅,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Direct.png
+🍿 国外媒体 = select,来往,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/ForeignMedia.png
+🍔 国内媒体 = select,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/DomesticMedia.png
+Ⓜ️ 微软服务 = select,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Microsoft.png
+🍎 苹果服务 = select,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+🎮 游戏平台 = select,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Game.png
+Telegram = select,来往,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
+Twitter = select,来往,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Twitter.png
+YouTube = select,来往,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
 # 🎥 Netflix = select,🇭🇰 香港节点,🇺🇸 美国节点,🇸🇬 新加坡节点,🇯🇵 日本节点,🇨🇳 台湾节点,🇬🇧 英国节点,🇰🇷 韩国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
-AI = select,🇺🇸 美国节点,🇬🇧 英国节点,🇩🇪 德国,🇨🇦 加拿大,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Round_Robin.png
+人工智能 = select,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Round_Robin.png
 # 🪙 Paypal = select,🇭🇰 香港节点,🇺🇸 美国节点,🇸🇬 新加坡节点,🇯🇵 日本节点,🇨🇳 台湾节点,🇬🇧 英国节点,🇰🇷 韩国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
 # 📖 Reddit = select,🇭🇰 香港节点,🇺🇸 美国节点,🇸🇬 新加坡节点,🇯🇵 日本节点,🇨🇳 台湾节点,🇬🇧 英国节点,🇰🇷 韩国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/ULB.png
 # 🐦 Discord = select,🇭🇰 香港节点,🇺🇸 美国节点,🇸🇬 新加坡节点,🇯🇵 日本节点,🇨🇳 台湾节点,🇬🇧 英国节点,🇰🇷 韩国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Discord.png
 # 📽 哔哩哔哩 = select,DIRECT,🇭🇰 香港节点,🇨🇳 台湾节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/bilibili.png
-香港节点 = url-test,香港节点,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/HK.png
-台湾节点 = url-test,台湾节点,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TW.png
-美国节点 = url-test,美国节点,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/US.png
-韩国节点 = url-test,韩国节点,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/KR.png
+香港节点 = url-test,香港,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/HK.png
+台湾节点 = url-test,台湾,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TW.png
+加拿大鹅 = url-test,加拿大,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/CA.png
+美国节点 = url-test,美国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/US.png
+欧盟节点 = url-test,欧盟,interval = 60,tolerance = 150,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/EU.png
+英国节点 = url-test,英国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/UK.png
+日本节点 = url-test,日本,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/JP.png
+韩国节点 = url-test,韩国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/KR.png
 俄罗斯节点 = url-test,俄罗斯节点,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/RU.png
-英国节点 = url-test,英国节点,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/UK.png
-日本节点 = url-test,日本节点,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/JP.png
-新加坡节点 = url-test,新加坡节点,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/SG.png
-德国 = url-test,德国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/DE.png
-加拿大 = url-test,加拿大,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/CA.png
+新加坡节点 = url-test,新加坡,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/SG.png
 [Remote Filter]
-香港节点 = NameRegex, FilterKey = "(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$"
-台湾节点 = NameRegex, FilterKey = "(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$"
-美国节点 = NameRegex, FilterKey = "(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|韓國|獅城)).)*$"
-韩国节点 = NameRegex, FilterKey = "(?=.*(KR|Korea|KOR|首尔|韩|韓|(?i)Korea))^((?!(香港|台湾|新加坡|美国|狮城|南朝鲜|US|SG|HK|TW|台灣|美國|獅城)).)*$"
-俄罗斯节点 = NameRegex, FilterKey = "🇷🇺|俄罗斯|RU|莫斯科|圣彼得堡|喀山|哈尔科夫|乌法|新西伯利亚|下诺夫哥罗德|沃罗涅什"
-英国节点 = NameRegex, FilterKey = "🇬🇧|英国|UK|伦敦|英格兰|伯明翰|泰恩河畔纽卡斯尔|利兹|爱丁堡|格拉斯哥|苏格兰"
-日本节点 = NameRegex, FilterKey = "(?=.*(日本|JP|(?i)Japan))^((?!(香港|台湾|新加坡|美国|韩国|狮城|南朝鲜|US|SG|KR|HK|TW|台灣|美國|韓國|獅城)).)*$"
-新加坡节点 = NameRegex, FilterKey = "(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW|台灣|美國|韓國)).)*$"
-加拿大节点 = NameRegex, FilterKey = "🇨🇦|加拿大|CA|渥太华"
-欧盟节点 = NameRegex, FilterKey = (?=.*(?i)(德国|Germany|法国|France|意大利|Italy|西班牙|Spain|奥地利|Austria|比利时|Belgium|保加利亚|Bulgaria|克罗地亚|Croatia|塞浦路斯|Cyprus|捷克|Czechia|捷克共和国|Czech Republic|丹麦|Denmark|爱沙尼亚|Estonia|芬兰|Finland|希腊|Greece|匈牙利|Hungary|爱尔兰|Ireland|拉脱维亚|Latvia|立陶宛|Lithuania|卢森堡|Luxembourg|马耳他|Malta|荷兰|Netherlands|波兰|Poland|葡萄牙|Portugal|罗马尼亚|Romania|斯洛伐克|Slovakia|斯洛文尼亚|Slovenia|瑞典|Sweden))
+香港 = NameRegex, FilterKey = "(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$"
+台湾 = NameRegex, FilterKey = "(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$"
+美国 = NameRegex, FilterKey = "(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|韓國|獅城)).)*$"
+韩国 = NameRegex, FilterKey = "(?=.*(KR|Korea|KOR|首尔|韩|韓|(?i)Korea))^((?!(香港|台湾|新加坡|美国|狮城|南朝鲜|US|SG|HK|TW|台灣|美國|獅城)).)*$"
+英国 = NameRegex, FilterKey = "🇬🇧|英国|UK|伦敦|英格兰|伯明翰|泰恩河畔纽卡斯尔|利兹|爱丁堡|格拉斯哥|苏格兰"
+日本 = NameRegex, FilterKey = "(?=.*(日本|JP|(?i)Japan))^((?!(香港|台湾|新加坡|美国|韩国|狮城|南朝鲜|US|SG|KR|HK|TW|台灣|美國|韓國|獅城)).)*$"
+新加坡 = NameRegex, FilterKey = "(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW|台灣|美國|韓國)).)*$"
+加拿大 = NameRegex, FilterKey = "🇨🇦|加拿大|CA|渥太华"
+欧盟 = NameRegex, FilterKey = "(?=.*(?i)(德国|Germany|法国|France|意大利|Italy|西班牙|Spain|奥地利|Austria|比利时|Belgium|保加利亚|Bulgaria|克罗地亚|Croatia|塞浦路斯|Cyprus|捷克|Czechia|捷克共和国|Czech Republic|丹麦|Denmark|爱沙尼亚|Estonia|芬兰|Finland|希腊|Greece|匈牙利|Hungary|爱尔兰|Ireland|拉脱维亚|Latvia|立陶宛|Lithuania|卢森堡|Luxembourg|马耳他|Malta|荷兰|Netherlands|波兰|Poland|葡萄牙|Portugal|罗马尼亚|Romania|斯洛伐克|Slovakia|斯洛文尼亚|Slovenia|瑞典|Sweden))"
 [Remote Rule]
 https://limbopro.com/Adblock4limbo_surge.list, policy=REJECT, tag=毒奶, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Advertising/Advertising.list, policy=REJECT, tag=去广告, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Advertising/Advertising_Domain.list, policy=REJECT, tag=去广告, enabled=true
-https://whatshub.top/rule/ai.list, policy=AI, tag=AI, enabled=true
-https://whatshub.top/rule/ChatGPT.list, policy=AI, tag=ChatGPT, enabled=true
-https://whatshub.top/rule/GitHub.list, policy=来往, tag=Github, enabled=true
-https://whatshub.top/rule/Google.list, policy=审判日, tag=Google, enabled=true
-https://whatshub.top/rule/GoogleVoice.list, policy=🇺🇸 美国节点, tag=Voice, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/TestFlight/TestFlight.list, policy=来往, tag=TestFlight, enabled=true
-https://whatshub.top/rule/Microsoft.list, policy=Ⓜ️ 微软服务, tag=微软, enabled=true
-https://whatshub.top/rule/AppleProxy.list, policy=审判日, tag=苹果·代理, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Advertising/Advertising_Domain.list, policy=REJECT, tag=去广告_Domain, enabled=true
+https://whatshub.top/rule/WeChat.list, policy=DIRECT, tag=微信直连, enabled=true
+https://whatshub.top/rule/ai.list, policy=人工智能, tag=人工智能, enabled=true
+https://whatshub.top/rule/GitHub.list, policy=来往, tag=GitHub, enabled=true
 https://whatshub.top/rule/Telegram.list, policy=Telegram, tag=Telegram, enabled=true
-https://whatshub.top/rule/Twitter.list, policy=Twitter, tag=X, enabled=true
-https://whatshub.top/rule/PlayStation.list, policy=🎮 游戏平台, tag=PS, enabled=true
-https://whatshub.top/rule/Sony.list, policy=🎮 游戏平台, tag=Sony, enabled=true
-https://whatshub.top/rule/Epic.list, policy=🎮 游戏平台, tag=EPIC, enabled=true
-https://whatshub.top/rule/Steam.list, policy=🎮 游戏平台, tag=Steam, enabled=true
-https://whatshub.top/rule/PayPal.list, policy=🪙 Paypal, tag=Paypal, enabled=false
-https://whatshub.top/rule/Reddit.list, policy=📖 Reddit, tag=Reddit, enabled=false
-https://whatshub.top/rule/Discord.list, policy=🐦 Discord, tag=Discord, enabled=false
-https://whatshub.top/rule/YouTube.list, policy=YouTube, tag=YouTube, enabled=true
-https://whatshub.top/rule/YouTubeMusic.list, policy=YouTube, tag=YouTube Music, enabled=true
-https://whatshub.top/rule/Netflix.list, policy=🎥 Netflix, tag=奈飞, enabled=false
-https://whatshub.top/rule/Twitch.list, policy=审判日, tag=Twitch, enabled=false
-https://whatshub.top/rule/Baidu.list, policy=DIRECT, tag=百度, enabled=true
-https://whatshub.top/rule/Apple.list, policy=🍎 苹果服务, tag=苹果·直连, enabled=true
-https://whatshub.top/rule/AppStore.list, policy=🍎 苹果服务, tag=苹果商店, enabled=true
-https://whatshub.top/rule/NetEase.list, policy=DIRECT, tag=网易, enabled=true
-https://whatshub.top/rule/NetEaseMusic.list, policy=DIRECT, tag=网易云音乐, enabled=true
-#https://whatshub.top/rule/AntiAD.list, policy=REJECT, enabled=true
-https://whatshub.top/rule/WeChat.list, policy=DIRECT, tag=微信·直连, enabled=true
-https://whatshub.top/rule/Douyu.list, policy=DIRECT, tag=抖音, enabled=true
-https://whatshub.top/rule/BiliBili.list, policy=📽 哔哩哔哩, tag=哔哩哔哩, enabled=true
-https://whatshub.top/rule/ChinaMedia.list, policy=🍔 国内媒体, tag=国内媒体, enabled=true
+https://whatshub.top/rule/Microsoft.list, policy=Ⓜ️ 微软服务, tag=微软服务, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, policy=🍎 苹果服务, tag=苹果服务, enabled=true
+https://whatshub.top/rule/GoogleVoice.list, policy=美国节点, tag=GoogleVoice, enabled=true
 https://whatshub.top/rule/ProxyMedia.list, policy=🍿 国外媒体, tag=国外媒体, enabled=true
-https://whatshub.top/rule/Proxy.list, policy=审判日, tag=全球规则, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/China/China.list, policy=DIRECT, tag=全球直连, enabled=true
-https://rule.kelee.one/Loon/ChinaMax.list, policy=DIRECT, tag=ChinaMax.list, enabled=true
-https://whatshub.top/rule/ASN-CN.list, policy=DIRECT, tag=ASN-CN, enabled=true
+https://whatshub.top/rule/BiliBili.list, policy=🍔 国内媒体, tag=哔哩哔哩, enabled=true
+https://raw.githubusercontent.com/ConnersHua/RuleGo/master/Surge/Ruleset/Proxy.list, policy=来往, tag=全球加速, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=国内网站, enabled=true
+
 [Rule]
-GEOIP,CN,DIRECT
+GEOIP,cn,DIRECT
 FINAL,审判日
 
 [Rewrite]
