--- a/Sol81X.conf
+++ b/Sol81X.conf
@@ -111,6 +111,7 @@ YouTube = select,来往,img-url = https://raw.githubusercontent.com/Koolson/Qure
 加拿大 = NameRegex, FilterKey = "🇨🇦|加拿大|CA|渥太华"
 欧盟 = NameRegex, FilterKey = "(?=.*(?i)(德国|Germany|法国|France|意大利|Italy|西班牙|Spain|奥地利|Austria|比利时|Belgium|保加利亚|Bulgaria|克罗地亚|Croatia|塞浦路斯|Cyprus|捷克|Czechia|捷克共和国|Czech Republic|丹麦|Denmark|爱沙尼亚|Estonia|芬兰|Finland|希腊|Greece|匈牙利|Hungary|爱尔兰|Ireland|拉脱维亚|Latvia|立陶宛|Lithuania|卢森堡|Luxembourg|马耳他|Malta|荷兰|Netherlands|波兰|Poland|葡萄牙|Portugal|罗马尼亚|Romania|斯洛伐克|Slovakia|斯洛文尼亚|Slovenia|瑞典|Sweden))"
 [Remote Rule]
+https://raw.githubusercontent.com/ddgksf2013/Filter/master/Unbreak.list, tag=规则修正, policy=DIRECT, enabled=true
 https://limbopro.com/Adblock4limbo_surge.list, policy=REJECT, tag=毒奶, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Advertising/Advertising.list, policy=REJECT, tag=去广告, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Advertising/Advertising_Domain.list, policy=REJECT, tag=去广告_Domain, enabled=true
