--- a/Sol81X.conf
+++ b/Sol81X.conf
@@ -72,14 +72,15 @@ iosapps.itunes.apple.com = iosapps.itunes.apple.com.download.ks-cdn.com
 [Proxy]
 
 [Remote Proxy]
-订阅 = 链接
+订阅1 = 链接
+订阅2 = 链接
 
 [Proxy Group]
 Hann = select,Sol81x,Linn,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Social_Media/Snapchat.png
 审判日 = select,DIRECT,来往,REJECT,img-url = https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/jianshouqing-emby.png
 来往 = select,Hann,香港节点,台湾节点,日本节点,韩国节点,英国节点,美国节点,加拿大鹅,url = http://www.gstatic.com/generate_204,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Direct.png
-车站 = select,下北沢,url = http://www.gstatic.com/generate_204,img-url = https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/SIESTA-(2)emby.png
-帆船 = select,静帆,url = http://www.gstatic.com/generate_204,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Social_Media/Snapfish.png
+车站 = select,订阅1,url = http://www.gstatic.com/generate_204,img-url = https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/SIESTA-(2)emby.png
+帆船 = select,订阅2,url = http://www.gstatic.com/generate_204,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Social_Media/Snapfish.png
 🍿 国外媒体 = select,DIRECT,审判日,来往,REJECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/ForeignMedia.png
 🍔 国内媒体 = select,DIRECT,审判日,来往,REJECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/DomesticMedia.png
 Ⓜ️ 微软服务 = select,DIRECT,审判日,来往,REJECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Microsoft.png
