--- a/Sol81X.conf
+++ b/Sol81X.conf
@@ -81,7 +81,7 @@ Hann = select,Sol81x,Linn,img-url = https://raw.githubusercontent.com/Semporia/H
 来往 = select,Hann,香港节点,台湾节点,日本节点,韩国节点,英国节点,美国节点,加拿大鹅,url = http://www.gstatic.com/generate_204,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Direct.png
 车站 = select,订阅1,url = http://www.gstatic.com/generate_204,img-url = https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/SIESTA-(2)emby.png
 帆船 = select,订阅2,url = http://www.gstatic.com/generate_204,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Social_Media/Snapfish.png
-🍿 国外媒体 = select,DIRECT,审判日,来往,REJECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/ForeignMedia.png
+# 🍿 国外媒体 = select,DIRECT,审判日,来往,REJECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/ForeignMedia.png
 🍔 国内媒体 = select,DIRECT,审判日,来往,REJECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/DomesticMedia.png
 Ⓜ️ 微软服务 = select,DIRECT,审判日,来往,REJECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Microsoft.png
 🍎 苹果服务 = select,DIRECT,审判日,来往,REJECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
@@ -134,7 +134,7 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Quant
 https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/Baidu/Baidu.list, policy=百度, tag=百度, enabled=true
 https://raw.githubusercontent.com/ddgksf2013/Filter/master/GoogleVoice.list, policy=Voice, tag=Google Voice, enabled=true
 https://gist.githubusercontent.com/ddgksf2013/cb4121e8b5c5d865cc949cb8120320c4/raw/Ai.yaml, policy=🤖 人工智能, tag=人工智能, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Spotify/Spotify.list, policy=Spotify, tag=Spotify音乐, enabled=true
+https://whatshub.top/rule/Spotify.list, policy=Spotify, tag=Spotify音乐, enabled=true
 https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/YouTube/YouTube.list, policy=YouTube, tag=YouTube, enabled=true
 https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/Twitter/Twitter.list, policy=Twitter, tag=Twitter, enabled=true
 https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/Telegram/Telegram.list, policy=Telegram, tag=Telegram, enabled=true
