--- a/Linn.conf
+++ b/Linn.conf
@@ -99,6 +99,8 @@ Spotify = select,DIRECT,节点选择,香港节点,台湾节点,美国节点,img-
 # 韩国 = NameRegex, FilterKey = "(?i)(KR|Korea|KOR|首尔|韩|韓)"
 美国 = NameRegex, FilterKey = "(?i)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
 新加坡 = NameRegex, FilterKey = "(?i)(新加坡|坡|狮城|SG|Singapore)"
+英国 = NameRegex, FilterKey = "🇬🇧|英国|UK|伦敦|英格兰|伯明翰|泰恩河畔纽卡斯尔|利兹|爱丁堡|格拉斯哥|苏格兰"
+欧盟 = NameRegex, FilterKey = "(?=.*(?i)(德国|Germany|法国|France|意大利|Italy|西班牙|Spain|奥地利|Austria|比利时|Belgium|保加利亚|Bulgaria|克罗地亚|Croatia|塞浦路斯|Cyprus|捷克|Czechia|捷克共和国|Czech Republic|丹麦|Denmark|爱沙尼亚|Estonia|芬兰|Finland|希腊|Greece|匈牙利|Hungary|爱尔兰|Ireland|拉脱维亚|Latvia|立陶宛|Lithuania|卢森堡|Luxembourg|马耳他|Malta|荷兰|Netherlands|波兰|Poland|葡萄牙|Portugal|罗马尼亚|Romania|斯洛伐克|Slovakia|斯洛文尼亚|Slovenia|瑞典|Sweden))"
 
 # ----------------------------------------------------------------
 [Remote Rule]
